--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ navbar-links:
 
 
 # [수정필요] 아바타 로고 사용 시에는 이미지 파일을 지정 (이미지 파일 업로드 후, 위치 지정)
-avatar: "assets/img/img_mijin.jpg"
+avatar: "assets/img/KakaoTalk_20231020_150027839_01.jpg"
 # 원형 아바타 이미지 여부 `true` 또는 `false`
 round-avatar: true
 
