--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ social-network-links:
   email: "mijinkim0714@gmail.com"
 # facebook: seokho.son.korea
 #  github: seokho-son
-# linkedin: "www.linkedin.com/in/mijin-kim-77323b2a5"
+ linkedin: "www.linkedin.com/in/mijin-kim-askhow"
 #  twitter: daattali
 #  rss: true
 #  reddit: yourname
