--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ author: Mijin Kim
 # [조건부수정] 네비게이션 바에 포함되는 항목 (명칭 수정, 추가, 삭제 가능)
 # 예를 들어 ETRI 라는 항목을 네비게이션 바에 추가하고 싶은 경우, etri.md 파일 생성 후 ETRI: "etri" 라고 지정.
 navbar-links:
+  CV: "https://drive.google.com/file/d/1Mee-pa-DiKqzQz2aa51bKb5-pOdE7IQU/view?usp=sharing"
   Career: "career"
   Publication: "publication"
   Blog: "blog"
@@ -37,8 +38,8 @@ round-avatar: true
 social-network-links:
   email: "mijinkim0714@gmail.com"
 # facebook: seokho.son.korea
-#  github: seokho-son
-# linkedin: "www.linkedin.com/in/mijin-kim-askhow"
+# github: seokho-son
+  linkedin: "www.linkedin.com/in/mijin-kim-askhow"
 #  twitter: daattali
 #  rss: true
 #  reddit: yourname
