--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ navbar-links:
   Publication: "publication"
   Blog: "blog"
   Project: "project"
-  Google Scholar: "https://scholar.google.com/citations?user=JY44k3cAAAAJ&hl=en"
+  # Google Scholar: "https://scholar.google.com/citations?user=JY44k3cAAAAJ&hl=en"
 
 
 # [수정필요] 아바타 로고 사용 시에는 이미지 파일을 지정 (이미지 파일 업로드 후, 위치 지정)
