--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # [수정필요] 웹페이지 이름
-title: M.S. Mijin Kim
+title: Mijin Kim
 
 # [수정필요] 간단한 사이트 설명
 description: Acedemic Website of Mijin Kim
@@ -21,7 +21,7 @@ navbar-links:
 
 
 # [수정필요] 아바타 로고 사용 시에는 이미지 파일을 지정 (이미지 파일 업로드 후, 위치 지정)
-avatar: "assets/img/KakaoTalk_20231020_150027839_01.jpg"
+avatar: "assets/img/KakaoTalk_20250611_213106334.jpg"
 # 원형 아바타 이미지 여부 `true` 또는 `false`
 round-avatar: true
 
